--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -20,19 +20,22 @@
                     </p>
                 </div>
                 <div class="col-md-10 mx-auto col-lg-5">
-                    <form class="p-4 p-md-5 border rounded-3 bg-light">
-                        <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" />
-                            <label for="floatingInput">Email address</label>
+                    <form class="p-4 p-md-5 border rounded-3 bg-light needs-validation" id="loginForm" novalidate>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email address:</label>
+                            <input type="email" name="email" class="form-control form-control-lg rounded-3" id="email" placeholder="" aria-label="Email address" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" />
+                            <div class="invalid-feedback">You must use a valid student email address e.g. user123@stud.noroff.no</div>
                         </div>
-                        <div class="form-floating mb-3">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" />
-                            <label for="floatingPassword">Password</label>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password:</label>
+                            <input type="password" name="password" class="form-control form-control-lg rounded-3" id="password" placeholder="" aria-label="Password" aria-labelledby="passwordHelpInline" required minlength="8" />
+                            <div class="invalid-feedback">Password is atleast 8 characters</div>
                         </div>
                         <div class="checkbox mb-3">
                             <label> <input type="checkbox" value="remember-me" /> Remember me </label>
                         </div>
                         <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Login</button>
+                        <div id="message"></div>
                         <a href="#">Forgot password?</a>
                         <hr class="my-4" />
                         <button type="button" id="registerButton" class="btn btn-lg btn-secondary" data-bs-toggle="modal" data-bs-target="#modalSignup">Create new account</button>
