--- a/feed/myPosts.html
+++ b/feed/myPosts.html
@@ -23,7 +23,7 @@
                         <li><a href="#" class="nav-link px-2 link-dark">People</a></li>
                     </ul>
 
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" id="searchForm">
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                         <input type="search" class="form-control" placeholder="Search..." aria-label="Search" />
                     </form>
 
@@ -32,7 +32,7 @@
                             <img src="/images/Portrait_Placeholder.png" alt="mdo" width="32" height="32" class="rounded-circle" />
                         </a>
                         <ul class="dropdown-menu text-small">
-                            <li><a class="dropdown-item" href="/feed/myPosts.html">My Posts</a></li>
+                            <li><a class="dropdown-item" href="#">My Posts</a></li>
                             <li><a class="dropdown-item" href="#">My Profile</a></li>
                             <li><hr class="dropdown-divider" /></li>
                             <li><a class="dropdown-item" href="/profile/login/index.html" id="logoutButton">Sign out</a></li>
