--- a/feed/index.html
+++ b/feed/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="container" id="postsContainer"></div>
             <div class="container">
-                <button class="btn btn-lg btn-primary mb-3" id="loadMorePosts">Load More Posts</button>
+                <button class="btn btn-lg btn-primary mb-3 d-none" id="loadMorePosts">Load More Posts</button>
             </div>
         </main>
         <div class="modals">
