--- a/feed/index.html
+++ b/feed/index.html
@@ -35,7 +35,7 @@
                             <li><a class="dropdown-item" href="/feed/myPosts.html">My Posts</a></li>
                             <li><a class="dropdown-item" href="#">My Profile</a></li>
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="/profile/login/index.html" id="logoutButton">Sign out</a></li>
+                            <li><a class="dropdown-item" href="/index.html" id="logoutButton">Sign out</a></li>
                         </ul>
                     </div>
                 </div>
@@ -64,8 +64,8 @@
                                 <!--  -->
                                 <div class="mb-3">
                                     <label for="title" class="form-label">Title:</label>
-                                    <input type="text" name="title" class="rounded-3 form-control form-control-lg" id="title" placeholder="" aria-label="Post title" minlength="4" required />
-                                    <div class="invalid-feedback">Title must contain a character</div>
+                                    <input type="text" name="title" class="rounded-3 form-control form-control-lg" id="title" placeholder="" aria-label="Post title" minlength="2" required />
+                                    <div class="invalid-feedback">Title must contain atleast 2 characters</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="postBody" class="form-label">Body:</label>
