--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 text-center text-lg-start">
-                    <h1 class="display-4 fw-bold lh-1 mb-3">Vertically centered hero sign-up form</h1>
-                    <p class="col-lg-10 fs-4">
-                        Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.
-                    </p>
+                    <h1 class="display-4 fw-bold lh-1 mb-3">NOROFF Social Network</h1>
+                    <p class="col-lg-10 fs-4">Connect & share with your fellow students!</p>
                 </div>
                 <div class="col-md-10 mx-auto col-lg-5">
                     <form class="p-4 p-md-5 border rounded-3 bg-light needs-validation" id="loginForm" novalidate>
@@ -30,13 +28,9 @@
                                 <label for="password" class="form-label">Password:</label>
                                 <input type="password" name="password" class="form-control form-control-lg rounded-3" id="password" placeholder="" aria-label="Password" aria-labelledby="passwordHelpInline" />
                             </div>
-                            <div class="checkbox mb-3">
-                                <label> <input type="checkbox" value="remember-me" /> Remember me </label>
-                            </div>
                             <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Login</button>
                         </fieldset>
                         <div id="message"></div>
-                        <a href="#">Forgot password?</a>
                         <hr class="my-4" />
                         <button type="button" id="registerButton" class="btn btn-lg btn-secondary" data-bs-toggle="modal" data-bs-target="#modalSignup">Create new account</button>
                     </form>
