--- a/feed/index.html
+++ b/feed/index.html
@@ -17,11 +17,7 @@
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/feed/index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none"> NOROFF </a>
-
-                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                        <li><a href="#" class="nav-link px-2 link-secondary">Feed</a></li>
-                        <li><a href="#" class="nav-link px-2 link-dark">People</a></li>
-                    </ul>
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"></ul>
 
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" id="searchForm">
                         <input type="search" class="form-control" placeholder="Search..." aria-label="Search" />
@@ -33,7 +29,6 @@
                         </a>
                         <ul class="dropdown-menu text-small">
                             <li><a class="dropdown-item" href="/feed/myPosts.html">My Posts</a></li>
-                            <li><a class="dropdown-item" href="#">My Profile</a></li>
                             <li><hr class="dropdown-divider" /></li>
                             <li><a class="dropdown-item" href="/index.html" id="logoutButton">Sign out</a></li>
                         </ul>
