--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
                         <fieldset>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email address:</label>
-                                <input type="email" name="email" class="form-control form-control-lg rounded-3" id="email" placeholder="" aria-label="Email address" />
+                                <input type="email" name="email" class="form-control form-control-lg rounded-3" id="email" aria-label="Email address" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" />
+                                <div class="invalid-feedback">You must use a valid student email address e.g. user123@stud.noroff.no</div>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password:</label>
-                                <input type="password" name="password" class="form-control form-control-lg rounded-3" id="password" placeholder="" aria-label="Password" aria-labelledby="passwordHelpInline" />
+                                <input
+                                    type="password"
+                                    name="password"
+                                    class="form-control form-control-lg rounded-3"
+                                    id="password"
+                                    placeholder=""
+                                    aria-label="Password"
+                                    aria-labelledby="passwordHelpInline"
+                                    required
+                                    aria-describedby="You must provide your password"
+                                />
                             </div>
                             <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Login</button>
                         </fieldset>
